# data-engineering-zoomcamp

./: .gitignore  pyproject.toml
Homework/Module1/: Homework1.md  Module1.md  ingest_data.py
Homework/Module2/: Homework2.md
terraform/: main.tf  variables.tf
